apps/v4l2rtspserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtsp0
  namespace: v4l2rtspserver
  labels:
    app: rtsp0
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rtsp0
  template:
    metadata:
      name: rtsp0
      namespace: v4l2rtspserver
      labels:
        app: rtsp0
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: camera
                  operator: In
                  values:
                    - "0"
      containers:
      - name: camera-default
        args:
          # TODO setup muticast network once motion is deployed
          # HTTP over HLS port
          - "-p"
          - "8085"
          # RTSP port
          - "-P"
          - "8554"
          - "-u"
          - ""
          - "/dev/video0,/dev/video0"
        livenessProbe:
          tcpSocket:
            port: rtsp-tcp
          initialDelaySeconds: 120
        image: docker.io/mpromonet/v4l2rtspserver:latest
        ports:
        - containerPort: 8554
          name: rtsp-udp
          protocol: UDP
        - containerPort: 8554
          name: rtsp-tcp
          protocol: TCP
        - containerPort: 8085
          name: rtsp-http
        securityContext:
          privileged: true
        volumeMounts:
        - name: snd0
          mountPath: /dev/snd
        - name: password
          mountPath: /etc/user-password
        - name: video0
          mountPath: /dev/video0
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "2000m"
      volumes:
      - name: video0
        hostPath: 
          path: /dev/video0
          type: CharDevice
      - name: snd0
        hostPath:
          path: /dev/snd
          type: Directory
      - name: password
        secret:
          secretName: user-password
          optional: false
          defaultMode: 0400
      dnsPolicy: ClusterFirst
      restartPolicy: Always
