apps/v4l2rtspserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: v4l2rtspserver-udp
  namespace: v4l2rtspserver
  labels:
    app: v4l2rtspserver
spec:
  ports:
  - name: 8554-8554-udp
    nodePort: 32554
    port: 8554
    protocol: UDP
    targetPort: rtsp-udp
  - name: 8554-8554-tcp
    nodePort: 32554
    port: 8554
    protocol: TCP
    targetPort: rtsp-tcp
  type: NodePort
